syntax = "proto3";
package network;

message CreateInterfaceRequest {
    string ip_address = 1;
    repeated int32 ports = 2;
}

message CreateInterfaceResponse {
    string interface_name = 1;
}

message DeleteInterfaceRequest {
    string interface_name = 1;
}

message CreateContainerNetworkInterfaceRequest {
    string ip_address = 1;
    string sub_network = 2;
}

message CreateContainerNetworkInterfaceResponse {
    string interface_name = 1;
}

message Empty {}

service Network {
    rpc CreateInterface(CreateInterfaceRequest) returns (CreateInterfaceResponse) {}
    rpc DeleteInterface(DeleteInterfaceRequest) returns (Empty) {}
    rpc CreateContainerNetworkInterface(CreateContainerNetworkInterfaceRequest) returns (CreateContainerNetworkInterfaceResponse) {}
}
